--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -1,17 +1,27 @@
-# FROM mariadb
+FROM mariadb:10.8.2
+# FROM debian:buster
 
-FROM debian:buster
+# RUN apt-get update
+# RUN apt-get install -y mariadb-server vim 
 
-RUN apt-get update
-RUN apt-get install -y mariadb-server
+# COPY mariadb.sql mariadb.sql
+# # COPY import-data.sh import-data.sh
+# # COPY entrypoint.sh entrypoint.sh
 
-# ENV MYSQL_ROOT_PASSWORD=Promisaki
+# ENV MYSQL_ROOT_PASSWORD=root_misaki
 # ENV MYSQL_PASSWORD=misaki
 # ENV MYSQL_USER=misaki_user
 # ENV MYSQL_DATABASE=misaki_db
 
-# VOLUME /Users/mmounchi/data/
-# mysql -uroot < data.sql
-EXPOSE 3306
-# mysql -uroot 'create database $'
-CMD ["mysqld_safe"]
+
+# RUN /etc/init.d/mariadb start
+# RUN mysql -u root -p${MYSQL_ROOT_PASSWORD} -e "CREATE DATABASE ${MYSQL_DATABASE}"
+# RUN mysql -u root -p${MYSQL_ROOT_PASSWORD} -D ${MYSQL_DATABASE} < mysql.sql
+
+# # VOLUME /Users/mmounchi/data/
+# # mysql -uroot < data.sql
+# EXPOSE 3306
+# # mysql -uroot 'create database $'
+# # CMD ["mysqld_safe"]
+# CMD [“mysqld”]
+
