--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,52 +1,30 @@
 # Default server configuration
 server {
-
         listen 443 ssl;
         listen [::]:443 ssl;
         
-        # server_name _;
-        root /var/www/html;
-        index index.html index.htm index.nginx-debian.html;
-
-        access_log /var/log/nginx/hakase-access.log;
-        error_log /var/log/nginx/hakase-error.log;
+        server_name mmounchi.42.fr www.mmounchi.42.fr;
+        root /var/www/html/wordpress;
+        index  index.html index.htm index.php;
+        
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
 
         ssl_certificate /etc/ssl/certs/selfsigned-nginx.crt;
         ssl_certificate_key /etc/ssl/private/selfsigned-nginx.key;
         ssl_protocols TLSv1.2 TLSv1.3;
 
         location / {
-        try_files $uri $uri/ /index.php?$args;
-    }
+            # index index.html index.htm index.html inde.php;
+            try_files $uri $uri/ /index.php?url=$uri;
+        }
  
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass localhost:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
+        location ~ \.php$ {
+            try_files $uri =404;
+            include /etc/nginx/fastcgi_params;
+            fastcgi_split_path_info ^(.+\.php)(.*)$;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $request_filename;
+            fastcgi_pass wordpress:9000;
+        }
 }
-
-# server {
-#         listen 80;
-#         listen [::]:80;
-#         root /var/www/html/wordpress;
-#         index  index.php index.html index.htm;
-#         # server_name mysite.com www.mysite.com;
-
-#         # error_log /var/log/nginx/mysite.com_error.log;
-#         # access_log /var/log/nginx/mysite.com_access.log;
-        
-#         client_max_body_size 100M;
-#         location / {
-#                 try_files $uri $uri/ /index.php?$args;
-#         }
-#         location ~ \.php$ {
-#                 include snippets/fastcgi-php.conf;
-#                 fastcgi_pass unix:/run/php/php7.3-fpm.sock;
-#                 fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
-#         }
-# }
