--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,18 +3,12 @@ version: '3'
 services:
   mariadb:
     build: ./mariadb/
-    ports:
-      - 3306:3306
+    image: mariadb
     container_name: mariadb
     volumes:
       - mariadb_data:/var/lib/mysql
     env_file: .env
-    # environment:
-    #   - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-    #   - MYSQL_USER=${MYSQL_USER}
-    #   - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-    #   - MYSQL_DATABASE=${MYSQL_DATABASE}
-    restart: on-failure
+    restart: always
     networks:
       - mynetwork
 
@@ -22,33 +16,30 @@ services:
     build: ./wordpress/
     image: wordpress
     container_name: wordpress
-    ports:
-      - 9000:9000
-      # - 80:80
     volumes:
-      -   wordpress_nginx:/var/www/html
+      - wordpress_nginx:/var/www/html
     depends_on:
       - mariadb
     env_file: .env
     networks:
       - mynetwork
-    restart: on-failure
-    tty: true
+    restart: always
+    # tty: true
 
-  # adminer:
-  #   build: ./bonus/adminer/
-  #   image: adminer
-  #   container_name: adminer
-  #   env_file: .env
-  #   # environment:
-  #   #   ADMINER_DEFAULT_SERVER: mariadb
-  #   restart: on-failure
-  #   depends_on:
-  #     - mariadb
-  #   ports:
-  #     - 8080:8080
-  #   networks:
-  #     - mynetwork
+  adminer:
+    build: ./bonus/adminer/
+    image: adminer
+    container_name: adminer
+    env_file: .env
+    # environment:
+    #   ADMINER_DEFAULT_SERVER: mariadb
+    restart: always
+    depends_on:
+      - mariadb
+    ports:
+      - 8080:8080
+    networks:
+      - mynetwork
       
   nginx:
     build: ./nginx/
@@ -58,14 +49,15 @@ services:
       - wordpress_nginx:/var/www/html
     ports:
       - 443:443
-      # - 80:80
     depends_on:
       - wordpress
+    restart: always
     networks:
       - mynetwork
 
 volumes:
   mariadb_data:
+  # nginx:
   wordpress_nginx:
       # device: /Users/mmounchi/Desktop/Data
       # name: wordpress_nginx
