--- a/bonus/adminer/Dockerfile
+++ b/bonus/adminer/Dockerfile
@@ -7,10 +7,10 @@ RUN apt-get upgrade -y
 RUN apt-get install wget vim apache2 php libapache2-mod-php php-curl php-cli php-mysql php-gd -y
 # RUN service apache2 startz
 # RUN service mariadb start
-COPY ./script.sh /
+# COPY ./script.sh /
 
-RUN chmod +x /script.sh
-RUN sh script.sh
+# RUN chmod +x /script.sh
+# RUN sh script.sh
 RUN wget "http://www.adminer.org/latest.php" -O /var/www/html/adminer.php
 RUN chown -R www-data:www-data /var/www/html/adminer.php
 RUN chmod 755 /var/www/html/adminer.php
