--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ server {
         ssl_protocols TLSv1.2 TLSv1.3;
 
         location / {
-            # index index.html index.htm index.html inde.php;
+            # index index.html index.htm inde.php;
             try_files $uri $uri/ /index.php?url=$uri;
         }
  
