--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,6 @@ server {
         ssl_protocols TLSv1.2 TLSv1.3;
 
         location / {
-            # index index.html index.htm inde.php;
             try_files $uri $uri/ /index.php?url=$uri;
         }
  
@@ -26,5 +25,21 @@ server {
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $request_filename;
             fastcgi_pass wordpress:9000;
+        }
+}
+
+server {
+        listen 1337;
+        listen [::]:1337;
+        
+        server_name mmounchi.42.fr www.mmounchi.42.fr;
+        root /var/www/html/website;
+        index index.html;
+        
+        access_log /var/log/nginx/accessws.log;
+        error_log /var/log/nginx/errorws.log;
+
+        location / {
+            try_files $uri $uri/ =404;
         }
 }
